--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
@@ -54,9 +54,10 @@
                 <p class="lead">更新時間: {{ data.update_datetime }}</p>
                 {% if data.item_status == '1' and data.book_count > 1 %}
                 <form method="POST" action="{{ url_for('cartController.add_to_cart') }}">
-                    <input type="hidden" name="item_id" value="{{ data.item_id }}"  min="0" oninput="validateInput()">
+                    <input type="hidden" name="item_id" value="{{ data.item_id }}" min="0" oninput="validateInput()">
                     <div class="d-flex">
-                        <input class="form-control text-center me-3" id="inputQuantity" name="quantity" type="number" value="1" style="max-width: 5rem" />
+                        <input class="form-control text-center me-3" id="inputQuantity" name="quantity" type="number"
+                               value="1" min='1' style="max-width: 5rem"/>
                         <button class="btn btn-outline-dark flex-shrink-0 add-to-cart-button" type="button">
                             <i class="bi-cart-fill me-1"></i>
                             加入購物車
@@ -143,6 +144,21 @@
             item_id_input.value = 0; // 如果值為負數，則設定為0
         }
     }
+
+    const inputQuantity = document.getElementById('inputQuantity');
+
+    inputQuantity.addEventListener('input', function () {
+        var value = parseInt(this.value);
+        var maxStock = parseInt(this.dataset.maxStock);
+
+        if (!Number.isInteger(value) || value < 1) {
+            this.value = 1; // 如果輸入非整數或小於1，將值設置為1
+        } else if (value > maxStock) {
+            this.value = maxStock; // 如果輸入大於最大庫存量，將值設置為最大庫存量
+        } else {
+            this.value = value; // 否則，保持使用者輸入的值
+        }
+    });
 </script>
 
 </html>
