--- a/static/css/search.css
+++ b/static/css/search.css
@@ -40,10 +40,6 @@
     margin-top: 20px;
 }
 
-#searchField {
-    margin-left: 20px;
-}
-
 #productType {
     margin-left: 20px;
 }
@@ -71,18 +67,20 @@
     weight: 300px;
     height: auto;
 }
-
+.search_container {
+    height: 100%;
+}
 .search_not_found{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 50px;
+    height: 100vh;
 }
 
 .search_not_found img{
-    max-width: 30%; /* 限制圖片寬度不超過容器寬度 */
-    max-height: 30%; /* 保持圖片高度自動調整 */
+    max-width: 60%; /* 限制圖片寬度不超過容器寬度 */
+    max-height: 60%; /* 保持圖片高度自動調整 */
     margin-bottom: 20px;
 }
 
