--- a/templates/product/header.html
+++ b/templates/product/header.html
@@ -4,6 +4,11 @@
         font-size: 28px;
         font-weight: bold;
     }
+
+    /* 新增自定義樣式，調整下拉選單的最小寬度 */
+    .custom-dropdown .dropdown-menu {
+        min-width: 350px;
+    }
 </style>
 <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
     <div class="container">
@@ -18,21 +23,19 @@
                     <form method="POST" action="{{ url_for('productController.search_books') }}" id="searchForm"
                           class="d-flex">
                         <input type="text" id="searchInput" name="keyword" class="form-control me-2"
-                               placeholder="輸入搜尋內容…">
+                               placeholder="輸入搜尋書籍…">
 
                         <!-- 這裡使用 Bootstrap 的 dropdown -->
-                        <div class="dropdown">
+                        <div class="dropdown custom-dropdown ">
                             <button class="btn btn-outline-secondary dropdown-toggle" type="button" id="customDropdown"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                 進階搜尋
                             </button>
-                            <ul class="dropdown-menu" aria-labelledby="customDropdown">
-                                <!-- 第一個下拉選單 -->
+                            <ul class="dropdown-menu p-4" aria-labelledby="customDropdown">
+                                <li><h5>搜尋條件</h5></li>
+                                <li><h6 class="dropdown-header">搜尋欄位</h6></li>
                                 <li>
-                                    <label for="searchField" class="dropdown-item-text">搜尋欄位</label>
-                                    <select id="searchField" name="searchField" class="form-select"
-                                            style="width: 250px;">
-                                        <!-- 調整這裡的寬度值 -->
+                                    <select id="searchField" name="searchField" class="form-select">
                                         <option value="title">全文</option>
                                         <option value="bookName">書名</option>
                                         <option value="author">作者</option>
@@ -41,13 +44,9 @@
                                         <option value="isbn">ISBN</option>
                                     </select>
                                 </li>
-
-                                <!-- 第二個下拉選單 -->
+                                <li><h6 class="dropdown-header">分類</h6></li>
                                 <li>
-                                    <label for="bookCategory" class="dropdown-item-text">分類</label>
-                                    <select id="bookCategory" name="bookCategory" class="form-select"
-                                            style="width: 250px;">
-                                        <!-- 調整這裡的寬度值 -->
+                                    <select id="bookCategory" name="bookCategory" class="form-select">
                                         <option value="all">All</option>
                                         <option value="fiction">Fiction</option>
                                         <option value="nonfiction">Non-Fiction</option>
@@ -55,10 +54,8 @@
                                         <option value="science">Science</option>
                                     </select>
                                 </li>
-
-                                <!-- 第三個下拉選單 -->
+                                <li><h6 class="dropdown-header">售價</h6></li>
                                 <li>
-                                    <label class="dropdown-item-text">售價</label>
                                     <div class="input-group">
                                         <input type="number" name="minPrice" min="0" placeholder="金額"
                                                class="form-control"
@@ -70,13 +67,13 @@
                                         <span class="input-group-text">元</span>
                                     </div>
                                 </li>
-
-                                <!-- 其他下拉選單項目 -->
+                                <li></li>
                             </ul>
                         </div>
 
                         <!-- 其他搜尋條件 -->
-                        <button class="btn btn-outline-success ms-2" type="submit" style="white-space: nowrap;">搜尋</button>
+                        <button class="btn btn-outline-success ms-2" type="submit" style="white-space: nowrap;">搜尋
+                        </button>
                     </form>
                 </li>
             </ul>
