--- a/templates/product/index.html
+++ b/templates/product/index.html
@@ -12,20 +12,21 @@
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.css"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tocas/4.2.5/tocas.min.js"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/slide.css') }}" rel="stylesheet"/>
     <link href="{{ url_for('static', filename='css/book.css') }}" rel="stylesheet"/>
-    <link href="{{ url_for('static', filename='css/search.css') }}" rel="stylesheet"/>
+    <style>
+        .contentBody {
+            height: 100vh;
+        }
+    </style>
 </head>
-
 <body>
 {% include '/product/header.html' %}
 <!-- Product section-->
 <section class="py-5">
-    <div class="container px-4 px-lg-5 my-5">
+    <div class="container px-4 px-lg-5 my-5 contentBody">
         <div class="row gx-4 gx-lg-5 align-items-center">
             <div class="col-md-6">
                 <img class="card-img-top mb-5 mb-md-0" src="{{ url_for('static', filename=data.book_image_path) }}"
